plugins {
    id 'fabric-loom' version '1.0-SNAPSHOT'
    id 'org.jetbrains.kotlin.jvm' version '1.7.0'
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
    maven { url "https://maven.meteordev.org/releases"}
    maven { url "https://maven.meteordev.org/snapshots" }
    mavenCentral()
    mavenLocal()
}

loom {
    accessWidenerPath = file("src/main/resources/higtools.accesswidener")
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_version}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0"

    modImplementation "meteordevelopment:meteor-client:${project.meteor_version}"
}

processResources {
    filesMatching("fabric.mod.json") {
        expand "version": project.version, "mc_version": project.minecraft_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding("UTF-8")
}
